--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<% include ../partials/header %>
 
 <!-- title with concept ––––––––––––––––––––––––––––––––– -->
 <section class="header">
@@ -116,4 +116,4 @@
   </div>
 </div>
 
-<% include footer %>
+<% include ../partials/footer %>
