--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,185 +1,217 @@
-.container {
-  max-width: 800px; }
-.header {
+/* Table of contents
+- Device Adaptation
+- Header
+- Title
+- Sections
+- Navigation
+- Footer
+- Media Queries for Large Screens
+*/
+
+/* Device Adaptation
+-------------------------------------------------- */
+@viewport{
+    zoom: 1.0;
+    width: device-width;
+}
+
+@viewport{
+  zoom: 1.0;
+  width: extend-to-zoom;
+}
+
+/* Header
+based on https://webdesign.tutsplus.com/articles/a-simple-responsive-mobile-first-navigation--webdesign-6074
+-------------------------------------------------- */
+header {
+
+    text-align: center;
+    background: #1c1c1c;
+    padding: 1rem 2rem;
+    position:  relative;
+    height: 6.5rem;
+}
+
+        /*shorter clearfix http://nicolasgallagher.com/micro-clearfix-hack/*/
+        header:before,
+        header:after {
+            content:"";
+            display:table;
+        }
+
+        header:after {
+            clear:both;
+        }
+
+        /* For IE 6/7 (trigger hasLayout) */
+        header {
+            zoom:1;
+        }
+
+h1.logo a {
+    color: #d8d8d8;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 22px;
+    letter-spacing: 0.2em;
+    position: absolute;
+    left: 1.3rem;
+    top: 3.1rem;
+  }
+
+div.to_nav {
+    background: #4e4e4e;
+    padding: 8px 12px 5px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    border-radius: 7px;
+    position:  absolute;
+    right: 1.3rem;
+    top: 1.3rem;
+}
+
+div.to_nav:hover,
+div.to_nav:focus {
+    color: #1c1c1c;
+    background: #ccc;
+}
+
+div.to_nav > a {
+  display:inline-block;
+  width:100%;
+  height:100%;
+  color: #fff;
+}
+
+/* Title
+-------------------------------------------------- */
+#page-title {
   margin-top: 6rem;
   text-align: center; }
-.docs-header {
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  letter-spacing: .2rem;
-  font-weight: 600; }
+
+/* Sections
+-------------------------------------------------- */
 .docs-section {
-  border-top: 1px solid #eee;
-  padding: 2rem 0;
-  margin-bottom: 0;}
-.grid .column,
-.grid .columns {
-  background: #EEE;
-  text-align: center;
-  border-radius: 4px;
-  font-size: 1rem;
-  text-transform: uppercase;
-  height: 30px;
-  line-height: 30px;
-  font-weight: 600;
-  letter-spacing: .1rem; }
-.docs-example .row,
-.docs-example.row,
-.docs-example form {
-  margin-bottom: 0; }
-.docs-example h1,
-.docs-example h2,
-.docs-example h3,
-.docs-example h4,
-.docs-example h5,
-.docs-example h6 {
-  margin-bottom: 1rem; }
-.heading-font-size {
-  font-size: 1.2rem;
-  color: #999;
-  letter-spacing: normal; }
-.code-example {
-  margin-top: 1.5rem;
-  margin-bottom: 0; }
-.code-example-body {
-  white-space: pre;
-  word-wrap: break-word }
-.example {
-  position: relative;
-  margin-top: 4rem; }
-.example-header {
-  font-weight: 600;
-  margin-top: 1.5rem;
-  margin-bottom: .5rem; }
-.example-description {
-  margin-bottom: 1.5rem; }
-.navbar {
-  display: none; }
-
-/* Larger than phone */
-@media (min-width: 550px) {
-  .header {
-    margin-top: 18rem; }
-  .grid .column,
-  .grid .columns { }
-  .docs-section {
-    padding: 2rem 0; }
-  .example-send-yourself-copy {
-    float: right;
-    margin-top: 12px; }
+  /* add space between page sections */
+  margin-top: 4rem;
 }
 
-/* Larger than tablet */
-@media (min-width: 750px) {
-  /* Navbar */
-  .navbar + .docs-section {
-    border-top-width: 0; }
-  .navbar,
-  .navbar-spacer {
-    display: block;
-    width: 100%;
-    height: 6.5rem;
-    background: #fff;
-    z-index: 99;
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee; }
-  .navbar-spacer {
-    display: none; }
-  .navbar > .container {
-    width: 100%; }
-  .navbar-list {
-    list-style: none;
-    margin-bottom: 0; }
-  .navbar-item {
-    position: relative;
-    float: left;
-    margin-bottom: 0; }
-  .navbar-link {
-    text-transform: uppercase;
-    font-size: 11px;
-    font-weight: 600;
-    letter-spacing: .2rem;
-    margin-right: 35px;
-    text-decoration: none;
-    line-height: 6.5rem;
-    color: #222; }
-  .navbar-link.active {
-    color: #33C3F0; }
-  .has-docked-nav .navbar {
-    position: fixed;
-    top: 0;
-    left: 0; }
-  .has-docked-nav .navbar-spacer {
-    display: block; }
-  /* Re-overiding the width 100% declaration to match size of % based container */
-  .has-docked-nav .navbar > .container {
-    width: 80%; }
+/* Navigation
+------------------------------------------------- */
+#primary_nav ul {
+  display: block;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  list-style: none;
+  background: #1c1c1c;
 
-  /* Popover */
-  .popover.open {
+}
+
+#primary_nav li a {
     display: block;
-  }
-  .popover {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #fff;
-    border: 1px solid #eee;
-    border-radius: 4px;
-    top: 92%;
-    left: -50%;
-    -webkit-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
-       -moz-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
-            filter: drop-shadow(0 0 6px rgba(0,0,0,.1)); }
-  .popover-item:first-child .popover-link:after,
-  .popover-item:first-child .popover-link:before {
-    bottom: 100%;
-    left: 50%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none; }
-  .popover-item:first-child .popover-link:after {
-    border-color: rgba(255, 255, 255, 0);
-    border-bottom-color: #fff;
-    border-width: 10px;
-    margin-left: -10px; }
-  .popover-item:first-child .popover-link:before {
-    border-color: rgba(238, 238, 238, 0);
-    border-bottom-color: #eee;
-    border-width: 11px;
-    margin-left: -11px; }
-  .popover-list {
-    padding: 0;
-    margin: 0;
-    list-style: none; }
-  .popover-item {
-    padding: 0;
-    margin: 0; }
-  .popover-link {
-    position: relative;
-    color: #222;
-    display: block;
-    padding: 8px 20px;
-    border-bottom: 1px solid #eee;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 1.0rem;
-    font-weight: 600;
-    text-align: center;
-    letter-spacing: .1rem; }
-  .popover-item:first-child .popover-link {
-    border-radius: 4px 4px 0 0; }
-  .popover-item:last-child .popover-link {
-    border-radius: 0 0 4px 4px;
-    border-bottom-width: 0; }
-  .popover-link:hover {
+    padding: 0 20px;
     color: #fff;
-    background: #33C3F0; }
-  .popover-link:hover,
-  .popover-item:first-child .popover-link:hover:after {
-    border-bottom-color: #33C3F0; }
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    letter-spacing: 0.1em;
+    line-height: 3em;
+    height: 3em;
+    border-bottom: 1px solid #383838;
 }
+
+#primary_nav li {
+  margin-bottom: 0rem;
+}
+
+#primary_nav li:last-child a {
+    border-bottom: none;
+}
+
+#primary_nav li a:hover,
+#primary_nav li a:focus {
+    color: #1c1c1c;
+    background: #ccc;
+}
+
+/* horizontal lists for navigation */
+.list-inline {
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.list-inline>li {
+    display: inline-block;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.copyright {
+    text-align: center;
+}
+
+/* Footer
+------------------------------------------------- */
+footer {
+    font-style: italic;
+    text-align: center;
+    font-size: 14px;
+}
+
+.list-inline li {
+  padding: 0px 10px;
+}
+
+.list-inline li a {
+  color: #4e4e4e;
+
+}
+
+.list-inline li a:hover,
+.list-inline li a:focus {
+    color: #ccc;
+}
+
+/* Media Queries for Large Screens
+------------------------------------------------- */
+@media only screen and (min-width: 768px) {
+      /* hide menu button when displaying on large screens */
+      div.to_nav {
+        display: none;
+    }
+
+     /* style page navigation at top of screen */
+    .container {
+        position: relative;
+        width: 768px;
+        margin: auto;
+    }
+
+    #primary_nav {
+        position: absolute;
+        top: 1px;
+        right: 10px;
+        background: none;
+    }
+
+    #primary_nav li {
+        display: inline;
+    }
+
+    #primary_nav li a {
+        display: inline;
+        border: none;
+        padding: 13px 10px;
+        -webkit-border-radius: 2px;
+        -moz-border-radius: 2px;
+        border-radius: 2px;
+    }
+
+    /* add space between end of content and top of footer */
+    footer {
+      margin-top: 2.5rem;
+    }
+ }
