--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,119 +1,52 @@
-<% include ../partials/header %>
+<!-- views/pages/index.ejs -->
 
-<!-- title with concept ––––––––––––––––––––––––––––––––– -->
-<section class="header">
-  <h2 class="title">Cross-disciplinary Approaches to Nonequilibrium Systems</h2>
-  <div class="row" style="margin: 7rem">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <% include ../partials/head %>
+</head>
 
-
-
-  </div>
-</section>
-
-<!-- navigation header ———————————————————————————————————————— -->
-<div class="navbar-spacer"></div>
-<nav class="navbar">
+<body class="code-snippets-visible">
+  <header>
+    <% include ../partials/header %>
+  </header>
 
   <div class="container">
-    <ul class="navbar-list">
+    <section id="page-title">
+      <h2 class="title">Demo of CSS mobile first menu</h2>
+    </section>
+    <div class="docs-section" id="section-1">
+      <h4>Section 1</h4>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+    minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+    liquip ex ea commodo consequat. Duis aute irure dolor in
+    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+    culpa qui officia deserunt mollit anim id est laborum.
 
-      <li class="navbar-item">
-        <a class="navbar-link" href="#overview">Home</a>
-      </li>
-
-      <li class="navbar-item">
-        <a class="navbar-link" href="#overview">Background</a>
-      </li>
-
-      <li class="navbar-item">
-        <a class="navbar-link" href="#overview">Programme</a>
-      </li>
-
-      <li class="navbar-item">
-        <a class="navbar-link" href="#overview">Registration</a>
-      </li>
-
-      <li class="navbar-item">
-        <a class="navbar-link" href="#overview">Participants</a>
-      </li>
-
-      <li class="navbar-item">
-        <a class="navbar-link" href="#overview">Accomodation</a>
-      </li>
-
-      <li class="navbar-item">
-        <a class="navbar-link" href="#overview">Contact</a>
-      </li>
-
-      <li class="navbar-item">
-        <a class="navbar-link" href="#overview">Feedback</a>
-      </li>
-
-    </ul>
-  </div>
-
-</nav>
-
-<!-- overview description ———————————————————————————————————————— -->
-<div class="docs-section" id="overview">
-  <h6 class="docs-header">blablabla</h6>
-  <p>blablabla</p>
-</div>
-
-<!-- simulations ———————————————————————————————————————— -->
-<div class="docs-section" id="library">
-  <h6 class="docs-header">Library</h6>
-  <div class="grid">
-
-    <div id="filament-ratchets" style="top:-30px; position: relative;"></div>
-    <div class="row">
-
-      <div class="twelve columns">
-        <a href="blablabla" class="button">blablabla</a>
-      </div><br><br>
-
-        <p>
-            blablabla
-        </p>
-        <p>
-            blablabla
-        </p>
 
     </div>
-
-    <div id="wildfires" style="top:-30px; position: relative;"></div>
-    <div class="row">
-
-      <div class="twelve columns">
-        <a href="blablabla" class="button">blablabla</a>
-      </div><br><br>
-
-        <p>
-            blablabla
-        </p>
+    <div class="docs-section" id="section-2">
+      <h4>Section 2</h4>
+      At vero eos et accusamus et iusto odio dignissimos ducimus qui
+    blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
+    et quas molestias excepturi sint occaecati cupiditate non provident,
+    similique sunt in culpa qui officia deserunt mollitia animi, id est
+    laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
+    distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
+    cumque nihil impedit quo minus id quod maxime placeat facere possimus,
+    omnis voluptas assumenda est, omnis dolor repellendus. Temporibus
+    autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe
+    eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
+    Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
+    voluptatibus maiores alias consequatur aut perferendis doloribus
+    asperiores repellat.
 
     </div>
   </div>
-</div>
 
-<!-- simulations ———————————————————————————————————————— -->
-<div class="docs-section" id="blablabla">
-  <h6 class="docs-header">Proofs</h6>
-  <div class="grid">
-
-    <div id="blablabla" style="top:-30px; position: relative;"></div>
-    <div class="row">
-
-      <div class="twelve columns">
-        <a href="blablabla" class="button">blablabla</a>
-      </div><br><br>
-
-        <p>
-            blablabla
-        </p>
-
-    </div>
-  </div>
-</div>
-
+<% include ../partials/navigation %>
+<footer>
 <% include ../partials/footer %>
+</footer>
