--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,42 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!-- views/partials/header.ejs -->
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Non-equilibrium Systems</title>
-  <meta name="description" content="MaSHine ArXiv">
-  <meta name="author" content="G. Szep">
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel='stylesheet' type='text/css' href='css/raleway.css'>
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href='css/normalize.css'>
-  <link rel="stylesheet" href='css/skeleton.css'>
-  <link rel="stylesheet" href='css/custom.css'>
-
-  <!-- Scripts
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script src='js/jquery.min.js'></script>
-  <script src='js/site.js'></script>
-
-  <!-- Prettify Code
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href='css/prettify.css'>
-  <script src='js/prettify.js'></script>
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href='img/favicon.png'>
-
-</head>
-<body class="code-snippets-visible">
-<div class="container">
+<h1 class="logo">
+  <a href="">SITE NAME</a>
+</h1>
+<div class="to_nav">
+  <a href="#primary_nav">
+    <i class="fa fa-3x fa-bars" aria-hidden="true"></i>
+  </a>
+</div>
