--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,14 +6,15 @@
   <% include ../partials/head %>
 </head>
 
-<body class="code-snippets-visible">
+<body class="code-snippets-visible" id="home">
   <header>
     <% include ../partials/header %>
   </header>
 
   <div class="container">
     <section id="page-title">
-      <h2 class="title">Demo of CSS mobile first menu</h2>
+      <h2 class="title">CONES 2018</h2>
+      <h3>Conference on Non-Equilibrium Systems</h3>
     </section>
     <div class="docs-section" id="section-1">
       <h4>Section 1</h4>
