--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,7 +12,7 @@
         </a>
       </li>
       <li>
-        <a href="http://twitter.com">
+        <a href="http://twitter.com/CANES_CDT">
           <span class="fa-stack fa-2x">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -33,6 +33,6 @@
     &copy;2017<script>
       new Date().getFullYear() > 2017 && document.write("-" + new Date().getFullYear());
     </script>
-    , COPYRIGHT HOLDER.
+    , CANES Programme.
   </p>
 </div>
