--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -19,3 +19,7 @@
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/skeleton.css">
 <link rel="stylesheet" href="css/custom.css">
+
+<!--  favicon -->
+<link rel="icon" type="image/png" href="img/favicon-32x32.ico" sizes="32x32" />
+<link rel="icon" type="image/png" href="img/favicon-16x16.ico" sizes="16x16" />
