--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/header.ejs -->
 
 <h1 class="logo">
-  <a href="">CONES 2018</a>
+  <a href="/">CONES 2018</a>
 </h1>
 <div class="to_nav">
   <a href="#primary_nav">
