--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -3,12 +3,27 @@
 <nav id="primary_nav">
   <ul>
     <li>
-      <a href="#section-1">Section 1</a>
+      <a href="background">Background</a>
     </li>
     <li>
-      <a href="#section-2">Section 2</a>
+      <a href="programme">Programme</a>
     </li>
     <li>
+      <a href="registration">Registration</a>
+    </li>
+    <li>
+      <a href="participants">Participants</a>
+    </li>
+    <li>
+      <a href="accommodation">Accommodation</a>
+    </li>
+    <li>
+      <a href="contact">Contact</a>
+    </li>
+    <li>
+      <a href="feedback">Feedback</a>
+    </li>
+    <li id="top-button">
       <a href="#home">Top</a>
     </li>
   </ul>
