Add y scroll to all pages
Stops the appearance of scrollbar on long pages making document /move/
strangely.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -20,6 +20,10 @@
   width: extend-to-zoom;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 /* Header
 based on https://webdesign.tutsplus.com/articles/a-simple-responsive-mobile-first-navigation--webdesign-6074
 -------------------------------------------------- */
