--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,8 +13,9 @@
 
   <div class="container">
     <section id="page-title">
-      <h2 class="title">CONES 2018</h2>
-      <h3>Conference on Non-Equilibrium Systems</h3>
+      <h2 class="title">Conference on Non-Equilibrium Systems</h2>
+      <h3>King's College London</h3>
+      <h4>25-27th June 2018</h4>
     </section>
     <div class="docs-section" id="section-1">
       <h4>Section 1</h4>
