--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,14 @@
 <!-- views/partials/header.ejs -->
 
-<h1 class="logo">
-  <a href="/">CONES 2018</a>
-</h1>
+<div class="logo-wrap">
+  <a href="/" class="logo logo-normal">
+    <img src="img/cones18-logo-white.png" alt="CONES 2018">
+  </a>
+  <a href="/" class="logo logo-rollover">
+    <img src="img/cones18-logo-grey.png" alt="CONES 2018">
+  </a>
+</div> <!-- close logo-wrap div -->
+
 <div class="to_nav">
   <a href="#primary_nav">
     <i class="fa fa-3x fa-bars" aria-hidden="true"></i>
