--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -15,7 +15,7 @@
       <a href="participants">Participants</a>
     </li>
     <li>
-      <a href="accommodation">Accommodation</a>
+      <a href="location">Location</a>
     </li>
     <li>
       <a href="contact">Contact</a>
