--- a/views/pages/speakers.ejs
+++ b/views/pages/speakers.ejs
@@ -13,8 +13,14 @@
 
   <div class="container">
     <section id="page-title">
-      <h2 class="title">Participants</h2>
+      <h2 class="title">Speakers</h2>
     </section>
+
+  <ul>
+  <% speakers.forEach(function(personObj){ %>
+  <li><%= personObj.title+" "+personObj.forename+" "+ personObj.surname %></li>
+  <% }) %>
+  </ul>
 
   </div>
 
