Load attendants and speakers into template. Still needs styling and padding with a bit of information being spefific about that the page is for (e.g. confirmed participants who've paid for registration.

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -6,13 +6,13 @@
       <a href="background">Background</a>
     </li>
     <li>
-      <a href="programme">Programme</a>
+      <a href="speakers">Speakers</a>
     </li>
     <li>
       <a href="registration">Registration</a>
     </li>
     <li>
-      <a href="participants">Participants</a>
+      <a href="attendants">Attendants</a>
     </li>
     <li>
       <a href="accommodation">Accommodation</a>
