--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -32,7 +32,7 @@
     <div class="docs-section" id="section-2">
       <h4>Section 2</h4>
       At vero eos et accusamus et iusto odio dignissimos ducimus qui
-    blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
+    blanditiis praesentium volufa-inverseptatum deleniti atque corrupti quos dolores
     et quas molestias excepturi sint occaecati cupiditate non provident,
     similique sunt in culpa qui officia deserunt mollitia animi, id est
     laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
@@ -46,7 +46,44 @@
     asperiores repellat.
 
     </div>
+
+    <div class="row logo-banner">
+      <div class="one-half column">
+        <div class="logo-container">
+        <a href="https://www.kcl.ac.uk/innovation/groups/noneqsys" target="_blank">
+          <img src="img/KCL_logo.gif" id="kcl-logo" alt="KCL Logo">
+        </a>
+        <!--
+        <div class="pin pin1">
+        <span class="fa-stack fa-2x pointer-icon">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-hand-pointer-o fa-stack-1x fa-inverse"></i>
+        </span>
+      </div>
+        -->
+      </div>
+    </div>
+
+    <div class="one-half column">
+      <div class="logo-container">
+      <a href="https://www.epsrc.ac.uk/skills/students/centres/profiles/crossdisciplinaryapproachestononequilibriumsystems/" target="_blank">
+        <img src="img/epsrc-logo.jpg" id="epsrc-logo" alt="EPSRC Logo">
+      </a>
+      <!--
+      <div class="pin pin2">
+      <span class="fa-stack fa-2x pointer-icon">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-hand-pointer-o fa-stack-1x fa-inverse"></i>
+      </span>
+    </div>
+      -->
+    </div>
   </div>
+    </div>
+
+  </div>
+
+
 
 <% include ../partials/navigation %>
 <footer>
