--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -21,7 +21,7 @@
       </li>
       <li>
         <a href="https://github.com">
-          <span class="fa-stack fa-2x">
+          <span class="fa-stack fa-2x pin">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-github fa-stack-1x fa-inverse"></i>
           </span>
