Remove github link from footer, add CANES@kcl.ac.uk as contact email

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
   <div id="contact-links">
     <ul class="list-inline">
       <li>
-        <a href="mailto:email@example.com">
+        <a href="mailto:CANES@kcl.ac.uk">
           <span class="fa-stack fa-2x">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
@@ -16,14 +16,6 @@
           <span class="fa-stack fa-2x">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-          </span>
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com">
-          <span class="fa-stack fa-2x pin">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-github fa-stack-1x fa-inverse"></i>
           </span>
         </a>
       </li>
