Fixes #32 Add contact details to contact tab
make mailto links open new tab

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -14,6 +14,8 @@
   <div class="container">
     <section id="page-title">
       <h2 class="title">Contact</h2>
+      <p>Please direct all enquiries to <a href="mailto:CANES@kcl.ac.uk" target="_blank" >CANES@kcl.ac.uk</a>.
+      </p>
     </section>
 
   </div>
