--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
   <div id="contact-links">
     <ul class="list-inline">
       <li>
-        <a href="mailto:CANES@kcl.ac.uk">
+        <a href="mailto:CANES@kcl.ac.uk" target="_blank" >
           <span class="fa-stack fa-2x">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
@@ -12,7 +12,7 @@
         </a>
       </li>
       <li>
-        <a href="http://twitter.com/CANES_CDT">
+        <a href="http://twitter.com/CANES_CDT" target="_blank" >
           <span class="fa-stack fa-2x">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
