Fixes #41 -- Home added to navigation bar

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -3,6 +3,9 @@
 <nav id="primary_nav">
   <ul>
     <li>
+      <a href="/">Home</a>
+    </li>
+    <li>
       <a href="background">Background</a>
     </li>
     <li>
