Speaker data as of 2018-04-17 loaded

--- a/views/pages/programme.ejs
+++ b/views/pages/programme.ejs
@@ -13,7 +13,7 @@
 
   <div class="container">
     <section id="page-title">
-      <h2 class="title">Speakers</h2>
+      <h2 class="title">Programme</h2>
     </section>
 
   <ul>
