--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -6,24 +6,16 @@
       <a href="/">Home</a>
     </li>
     <li>
-<<<<<<< 083f92e3b6b754f27fadf7849607c8328b6f418e
       <a href="background">Background</a>
-=======
-      <a href="speakers">Speakers</a>
->>>>>>> Load attendants and speakers into template.
+    </li>
+    <li>
+      <a href="programme">Programme</a>
     </li>
     <li>
       <a href="registration">Registration</a>
     </li>
     <li>
-<<<<<<< 083f92e3b6b754f27fadf7849607c8328b6f418e
       <a href="location">Location</a>
-=======
-      <a href="attendants">Attendants</a>
-    </li>
-    <li>
-      <a href="accommodation">Accommodation</a>
->>>>>>> Load attendants and speakers into template.
     </li>
     <li>
       <a href="contact">Contact</a>
