--- a/views/pages/programme.ejs
+++ b/views/pages/programme.ejs
@@ -34,10 +34,16 @@
       </ul>
     </section>
 
-    <section id="organizers">
+    <section>
+
       <h4>Organisers</h4>
-      <div>
+      <div class="row">
+      <div class="organizers one-half column">
+        <h5 class="organizer-heading">CANES Staff</h5>
         <ul>
+          <li>
+            <%- link_to("Alessia Annibale", "https://www.kcl.ac.uk/nms/depts/mathematics/people/atoz/annibalea.aspx", {target:"_blank"}) %>
+          </li>
           <li>
             <%- link_to("Joe Bhaseen", "https://www.kcl.ac.uk/nms/depts/physics/people/academicstaff/bhaseen.aspx", {target:"_blank"}) %>
           </li>
@@ -52,17 +58,14 @@
           </li>
         </ul>
       </div>
-      <div>
-        Website design:
+      <div class="organizers one-half column">
+        <h5 class="organizer-heading">Website design</h5>
         <ul>
           <li>Andrew Lane</li>
           <li>Gregg Szep</li>
         </ul>
       </div>
-      <ul>
-
-      </ul>
-
+    </div>
     </section>
 
 
