Add image and html structure for header div

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,13 +10,16 @@
   <header>
     <% include ../partials/header %>
   </header>
-
-  <div class="container">
-    <section id="page-title">
+  <div id=title-banner>
+    <img src="img/strand_night_1920_480.jpg" alt="Strand Campus at night">
+    <div id="title-text">
       <h2 class="title">Conference on Non-Equilibrium Systems</h2>
       <h3>King's College London</h3>
       <h4>25-27th June 2018</h4>
-    </section>
+    </div>
+  </div>
+  
+  <div class="container">
     <div class="docs-section" id="section-1">
       <h4>Section 1</h4>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
