--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -110,6 +110,30 @@ div.to_nav > a {
   color: #fff;
 }
 
+/* SITE HEADER
+-------------------------------------------------- */
+#title-banner {
+  width: 100%;
+  position: relative;
+}
+
+#title-banner img {
+  max-width: 100%;
+}
+
+#title-text {
+  position: absolute;
+  padding: 2rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.65);
+  border:2px solid #ccc;
+  color: #fff;
+  text-align: center;
+
+}
+
 /* Title
 -------------------------------------------------- */
 #page-title {
