--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -131,7 +131,6 @@ div.to_nav > a {
   border:2px solid #ccc;
   color: #fff;
   text-align: center;
-
 }
 
 /* Title
@@ -275,6 +274,18 @@ footer {
 
 /* Media Queries for Large Screens
 ------------------------------------------------- */
+@media only screen and (min-width: 415px) {
+  #title-text{
+    width: 75%;
+    padding:1rem}
+  #title-text h2 { font-size: 3.0rem }
+  #title-text h3 { font-size: 2.6rem }
+  #title-text h4 { font-size: 2.0rem }
+
+  }
+
+}
+
 @media only screen and (min-width: 550px) {
   .organizer-heading {
     font-weight: normal;
@@ -284,6 +295,7 @@ footer {
 }
 
 @media only screen and (min-width: 785px) {
+
       /* hide menu button when displaying on large screens */
       div.to_nav {
         display: none;
@@ -344,7 +356,12 @@ footer {
     }
 }
 
+@media only screen and (min-width: 950px) {
+  #title-text{width: auto;}
+}
+
  @media only screen and (min-width: 1170px) {
+   #title-text{padding:2rem}
 
    #primary_nav {
      margin-top: 24px;
@@ -363,4 +380,28 @@ footer {
      display: inline;
    }
 
+/*
+   #title-text {
+     position: absolute;
+     padding: 2rem;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     background-color: rgba(0, 0, 0, 0.65);
+     border:2px solid #ccc;
+     color: #fff;
+     text-align: center;
+   }
+   */
+
 }
+
+
+
+
+@media only screen and (min-width: 1440px) {
+  #title-text h2 { font-size: 4.2rem }
+  #title-text h3 { font-size: 3.6rem }
+  #title-text h4 { font-size: 3.0rem }
+
+  }
