--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -127,9 +127,13 @@ div.to_nav > a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.65);
+  background-color: rgba(0, 0, 0, 0.7);
   border:2px solid #ccc;
   color: #fff;
+  text-align: center;
+}
+
+#tagline {
   text-align: center;
 }
 
