--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -288,12 +288,9 @@ footer {
 
   }
 
-}
 
 @media only screen and (min-width: 550px) {
-  .organizer-heading {
-    font-weight: normal;
-  }
+  .organizer-heading { font-weight: normal; }
 
   #kcl-logo {width: 57%;}
 }
