--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,13 +31,21 @@
   <div class="container">
     <div class="docs-section" id="conference-overview">
       <h4 id="tagline">"Frontiers of non-equilibrium science"</h4>
-      <ul>
-        <li>Join us in London for the second biennial CONES conference</li>
-        <li>Second very important point</li>
-        <li>
-          Third point which is equally as important (if not more so ) than
-          points 1 and 2.
-        </li>
+      <ul class="big-list">
+	<li>
+	  Seeking to bring together researchers working on problems in
+	  Non-Equilibrium Systems in any discipline &#x2013; from the
+	  physical to the biological.
+	</li>
+	<li>
+	  Engage with the unifying ideas, methods, and challenges which
+	  characterise the study of irreversible processes.
+	</li>
+	<li>
+	  Interact with a cross-disciplinary group of academics from King's College
+	  London and beyond at our historic Strand campus in central London.
+	</li>
+      </ul>
 
     </div>
 
