--- a/views/pages/background.ejs
+++ b/views/pages/background.ejs
@@ -14,6 +14,52 @@
   <div class="container">
     <section id="page-title">
       <h2 class="title">Background</h2>
+      <div class="main-text">
+      <h4>What are non-equilibrium systems?</h4>
+      <div>
+	<p>
+	  How do we understand whether epidemics will spread, or predict the
+	  likelihood of extreme meteorological events? How do we optimize the
+	  design of nanoparticles to maximize efficiency in drug and gene
+	  delivery? How do we control heating in fast electronic devices, or
+	  understand how next generation solar cells might work? Can we detect
+	  whether a network of financial institutions is close to a crash? Can
+	  we predict the fate of cellular states in health and disease? These
+	  research challenges all relate to <b>non-equilibrium systems</b>.
+	</p>
+
+	<p>
+	  Such systems are typically irreversible, e.g. because they dissipate
+	  energy persistently pumped in from the outside, or they age towards
+	  an equilibrium state that is never reached. They also frequently
+	  exhibit extreme events, such as cascades of collective failure or the
+	  thermally activated rare event of a drug molecule being released from
+	  a vesicle.
+	</p>
+
+	<h4>Crossing discipline boundaries</h4>
+	<p>
+	  As the examples above show, the challenge of understanding
+	  non-equilibrium systems is central to a wide variety of problems
+	  across the spectrum of physical, mathematical, biological and
+	  environmental sciences. Significant advances will have to come from
+	  researchers capable of exploiting and enhancing these
+	  interdisciplinary links.
+	</p>
+
+	<h4>CONES and CANES</h4>
+	<p>
+	  The mission of the EPSRC-funded Centre for Doctoral Training in
+	  Cross-Disciplinary Approaches to Non-Equilibrium Systems (CANES) is
+	  to train future research leaders in the understanding, control and
+	  design of systems far from equilibrium, based on rigorous training in
+	  theoretical modelling, simulation and data-driven analysis, and a
+	  breadth of awareness of common themes across disciplines. CANES also
+	  functions as a UK Centre of Excellence for the research and research
+	  user community, and a national and international hub in the area of
+	  non-equilibrium systems. As part of this agenda it organises the
+	  biennial CONES meetings.
+	</p>
     </section>
 
   </div>
