--- a/views/pages/background.ejs
+++ b/views/pages/background.ejs
@@ -15,7 +15,7 @@
     <section id="page-title">
       <h2 class="title">Background</h2>
       <div class="main-text">
-      <h4>What are non-equilibrium systems?</h4>
+      <h4>What are Non-Equilibrium Systems?</h4>
       <div>
 	<p>
 	  How do we understand whether epidemics will spread, or predict the
@@ -47,18 +47,30 @@
 	  interdisciplinary links.
 	</p>
 
-	<h4>CONES and CANES</h4>
+	<h4>Research at King's College London</h4>
 	<p>
-	  The mission of the EPSRC-funded Centre for Doctoral Training in
-	  Cross-Disciplinary Approaches to Non-Equilibrium Systems (CANES) is
-	  to train future research leaders in the understanding, control and
-	  design of systems far from equilibrium, based on rigorous training in
+	  King's College London is home to a leading Non-Equilibrium Systems
+	  research centre— the Centre for Non-Equilibrium Science
+	  (<a href="https://cnes.kcl.ac.uk" target="_blank">CNES</a>). The
+	  centre comprises over 40 academics at King's, with subject
+	  backgrounds including Mathematics, Physics, Chemistry, Biology,
+	  Geography and Informatics. Its role is to serve as a focal point for
+	  cross-disciplinary research into non-equilbirium science
+	  internationally. In line with this obective, CNES organises the
+	  biennial CONES conference, and provides access to resources to assist
+	  in disseminating understanding of non-equilibrium science,
+	  including <a href="https://cnes.kcl.ac.uk/category/resources/"
+	  target="_blank">video lectures</a>.
+	</p>
+	<p>
+	  CNES also incorporates the EPSRC-funded Centre for Doctoral Training
+	  in Cross-Disciplinary Approaches to Non-Equilibrium Systems
+	  (<a href="https://cnes.kcl.ac.uk/cdt/"
+	  target="_blank">CANES</a>). The objective of the CDT is to train
+	  future research leaders in the understanding, control and design of
+	  systems far from equilibrium, based on rigorous training in
 	  theoretical modelling, simulation and data-driven analysis, and a
-	  breadth of awareness of common themes across disciplines. CANES also
-	  functions as a UK Centre of Excellence for the research and research
-	  user community, and a national and international hub in the area of
-	  non-equilibrium systems. As part of this agenda it organises the
-	  biennial CONES meetings.
+	  breadth of awareness of common themes across disciplines.
 	</p>
     </section>
 
