Add eStore button to registration page

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -24,6 +24,12 @@ html {
   overflow-y: scroll;
 }
 
+/* Buttons  */
+.button {
+    max-width: 20rem;
+    padding: 2rem 0rem 3.6rem 0rem
+}
+
 /* Header
 based on https://webdesign.tutsplus.com/articles/a-simple-responsive-mobile-first-navigation--webdesign-6074
 -------------------------------------------------- */
