--- a/views/pages/registration.ejs
+++ b/views/pages/registration.ejs
@@ -14,7 +14,15 @@
   <div class="container">
     <section id="page-title">
       <h2 class="title">Registration</h2>
+      <a class="button button-primary"
+	 href="https://estore.kcl.ac.uk/conferences-and-events/academic-faculties/faculty-of-natural-mathematical-sciences/crossdisciplinary-approaches-to-nonequilibrium-systems-canes/cones2018"
+	       target="_blank">Register Here</a>	   
     </section>
+    <section>
+      <h4>Conference fees</h4>
+      <p>Standard rate: £35 per day, or £100 for three days</p>
+      <p>Student rate: £25 per day</p>
+    </section> 
 
   </div>
 
