Minor changes to wording

--- a/views/pages/background.ejs
+++ b/views/pages/background.ejs
@@ -62,10 +62,9 @@
 	  CANES also functions as a UK Centre of Excellence for the research
 	  and research user community, and a national and international hub in
 	  the area of non-equilibrium systems. As part of this agenda it
-	  organises the biennial CONES meetings. CANES is part of a wider
-	  effort to further research into Non-Equilibrium Systems— the Centre
-	  for Non-Equilibrium Science (<a href="https://cnes.kcl.ac.uk"
-	  target="_blank">CNES</a>).
+	  organises the biennial CONES meetings. CANES is embedded in the
+	  Centre for Non-Equilibrium Science (<a href="https://cnes.kcl.ac.uk"
+	  target="_blank">CNES</a>) at King’s.
 	</p>
     </section>
 
