--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -33,8 +33,8 @@
       <h4 id="tagline">"Frontiers of non-equilibrium science"</h4>
       <ul class="big-list">
 	<li>
-	  CONES will be bringing together leading experts in non-equilibrium
-	  phenomena
+	  CONES will bring together leading experts in non-equilibrium
+	  science
 	</li>
 	<li>
 	  Thematic strands will include recent advances in the physical
