--- a/views/pages/location.ejs
+++ b/views/pages/location.ejs
@@ -24,16 +24,11 @@
 	</section>
 
 	<div class="docs-section" id="location-info">
-		The conference venue is King's College London Strand Campus,
-		which is at the heart of London. Click on the links inside the
-		markers to
-		<a href="img/strandmap.jpg">
-			view a detailed map of Strand Campus
-		</a>
-		 and
-		<a href="https://www.google.co.uk/maps/search/lodging+near+Strand,+London+WC2R+2LS/data=!3m1!4b1!4m5!2m4!5m3!5m2!1s2018-06-25!2i2">
-			book nearby accomodation
-		</a>.
+	  The conference will take place at King's College
+	  London, <a href="img/strandmap.jpg" target="_blank">Strand Campus</a>,
+	  in the centre of
+	  London. See <a href="https://www.google.co.uk/maps/search/lodging+near+Strand,+London+WC2R+2LS/data=!3m1!4b1!4m5!2m4!5m3!5m2!1s2018-06-25!2i2"
+	  target="_blank">links</a> to nearby accomodation.
 		<br><br>
 		<p style="text-align:center">
 		<strong>King’s College London</strong><br>
