--- a/views/pages/programme.ejs
+++ b/views/pages/programme.ejs
@@ -18,6 +18,7 @@
 
     <section id="speaker-list">
       <h4>Speakers</h4>
+      <p>Confirmed speakers include:</p>
       <ul>
         <% speakers.sort(sort_by_surname) %>
         <% speakers.forEach(function(speaker){ %>
@@ -32,6 +33,7 @@
           <% } %>
         <% }) %>
       </ul>
+     <p>And more to be announced.</p>
     </section>
 
     <section>
