Change favicon and site title, minor tweaks to wording

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -38,10 +38,10 @@
 	</li>
 	<li>
 	  Thematic strands will include recent advances in the physical
-	  sciences, biological modeling, and statistical mechanics
+	  sciences, biological modelling, and statistical mechanics
 	</li>
 	<li>
-	  The Conference will explore common challenges in non-equilibrium
+	  The conference will explore common challenges in non-equilibrium
 	  systems
 	  </li>
       </ul>
