--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,7 +3,7 @@
 <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <meta charset="utf-8">
-<title>Non-equilibrium Systems</title>
+<title>Conference on Non-Equilibirum Systems</title>
 <meta name="description" content="CONES conference website">
 <meta name="author" content="Andrew Lane">
 <!-- Mobile Specific Metas
@@ -21,5 +21,5 @@
 <link rel="stylesheet" href="css/custom.css">
 
 <!--  favicon -->
-<link rel="icon" type="image/png" href="img/favicon-32x32.ico" sizes="32x32" />
-<link rel="icon" type="image/png" href="img/favicon-16x16.ico" sizes="16x16" />
+<link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
