--- a/views/pages/location.ejs
+++ b/views/pages/location.ejs
@@ -28,7 +28,7 @@
 	  London, <a href="img/strandmap.jpg" target="_blank">Strand Campus</a>,
 	  in the centre of
 	  London. See <a href="https://www.google.co.uk/maps/search/lodging+near+Strand,+London+WC2R+2LS/data=!3m1!4b1!4m5!2m4!5m3!5m2!1s2018-06-25!2i2"
-	  target="_blank">links</a> to nearby accomodation.
+	  target="_blank">links</a> for nearby accommodation.
 		<br><br>
 		<p style="text-align:center">
 		<strong>King’s College London</strong><br>
