Add meta data for twitter card

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -23,3 +23,11 @@
 <!--  favicon -->
 <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+
+<!-- Twitter card meta data -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@CANES_CDT" />
+<meta name="twitter:creator" content="@alanescience" />
+<meta name="twitter:title" content="Conference on Non-Equilibrium Systems" />
+<meta name="twitter:description" content="Official website for the 2018 CONES conference" />
+<meta name="twitter:image" content="img/favicon-260x260.png" />
