corrected bullet indent

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,7 +31,7 @@
   <div class="container">
     <div class="docs-section" id="conference-overview">
       <h4 id="tagline">"Frontiers of non-equilibrium science"</h4>
-      <ul class="big-list">
+      <ul class="big-list left-aligned-list">
 	<li>
 	  CONES will bring together leading experts in non-equilibrium
 	  science
