--- a/views/pages/programme.ejs
+++ b/views/pages/programme.ejs
@@ -16,7 +16,7 @@
       <h2 class="title">Programme</h2>
     </section>
 
-    <section id="speaker-list">
+    <section id="speaker-list" class="left-aligned-list">
       <h4>Speakers</h4>
       <p>Confirmed speakers include:</p>
       <ul>
