--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -148,11 +148,16 @@ div.to_nav > a {
 
 .big-list {
     font-size: 1.7rem;
-    /*text-indent:-1.35em;*/
+}
 
+.big-list li {
+     margin-bottom: 3rem;
 }
-}
-.big-list li { margin-bottom: 3rem;}
+
+.left-aligned-list {
+    padding-left: 1.4em;
+    text-indent:-1.4em;
+}    
 
 /* Title
 -------------------------------------------------- */
