add description of open lecture to index page, include poster

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -46,6 +46,16 @@
 	  </li>
       </ul>
 
+      <p>
+	We are also pleased to announce a free lecture to accompany the
+	conference which is open to everyone. This lecture by Dr Allan Tucker
+	is entitled <i>Three AI Algorithms Inspired by Data from the Life
+	Sciences</i> and will take place on Tue 26<sup>th</sup> June. Guests
+	not already attending the main conference should register
+	<a href="https://www.eventbrite.co.uk/e/cones-2018-three-ai-algorithms-inspired-by-data-from-the-life-sciences-tickets-46439829781"
+	target="_blank">here</a> or see our <a href="tucker-cones2018.pdf"
+	target="_blank">poster</a> for more information.
+      </p>
     </div>
 
     <div class="row logo-banner">
