updated information for registration

--- a/views/pages/location.ejs
+++ b/views/pages/location.ejs
@@ -24,20 +24,37 @@
 	</section>
 
 	<div class="docs-section" id="location-info">
-	  The conference will take place at King's College
-	  London, <a href="img/strandmap.jpg" target="_blank">Strand Campus</a>,
-	  in the centre of
-	  London. See <a href="https://www.google.co.uk/maps/search/lodging+near+Strand,+London+WC2R+2LS/data=!3m1!4b1!4m5!2m4!5m3!5m2!1s2018-06-25!2i2"
-	  target="_blank">links</a> for nearby accommodation.
-		<br><br>
-		<p style="text-align:center">
-		<strong>King’s College London</strong><br>
-		Strand Campus<br>
-		London WC2R 2LS
-		</p>
+	  <p>
+	    The conference will take place at King's College
+	    London, <a href="img/strandmap.jpg" target="_blank">Strand
+	      Campus</a>, in the centre of
+	    London. See <a href="https://www.google.co.uk/maps/search/lodging+near+Strand,+London+WC2R+2LS/data=!3m1!4b1!4m5!2m4!5m3!5m2!1s2018-06-25!2i2"
+			   target="_blank">links</a> for nearby accommodation.
+	  </p>
+	  <h4>Registration</h4>
+	  <p>
+	    On the first day you have registered to attend the conference,
+	    please report to the Strand building reception at the below
+	    address. On the Strand campus <a href="img/strandmap.jpg"
+	    target="_blank">map</a> the Strand building is labelled 'B' and
+	    coloured green.
+	  </p>
+	  <p style="text-align:center">
+	    Strand building<br>
+	    Strand Campus<br>
+	    King’s College London<br>
+	    London<br>
+	    WC2R 2LS
+	  </p>
+	  <p>
+	    Registration will begin at 9:00 each day and take place in room
+	    K0.20. Talks will begin at 9:30.
+	  </p>
 	</div>
-
+	
+	<h4>Travel and Accommodation</h4>
 	<div id="map"></div>
+	<div>
 	<script>
 
 	var map
@@ -145,7 +162,8 @@
 
 		}
 
-	</script>
+						    </script>
+	</div>
 	<div class="docs-section" style="width:80%;margin-left:10%;" id="page-title">
 
 		<svg width="44px" height="44px" viewBox="0 0 400 400">
