update programme and listing of invited speakers

--- a/views/pages/programme.ejs
+++ b/views/pages/programme.ejs
@@ -17,11 +17,13 @@
     </section>
 
     <section>
+      <p>
+	<a href="CONES_Programme_v22June.pdf" target="_blank">Conference programme</a>
+      </p>
+
       <h4>Speakers</h4>
       <p>
-	For an up-to-date list of speakers, please see
-	our <a href="CONES_Programme_15June.pdf" target="_blank">preliminary
-	programme</a>. Confirmed speakers include:
+	Invited speakers include:
       </p>
       <ul id="speaker-list" class="left-aligned-list">
         <% speakers.sort(sort_by_surname) %>
@@ -37,7 +39,6 @@
           <% } %>
         <% }) %>
       </ul>
-     <p>And more to be announced.</p>
     </section>
 
     <section>
