tweak, embolden registration location

--- a/views/pages/location.ejs
+++ b/views/pages/location.ejs
@@ -34,8 +34,8 @@
 	  <h4>Registration</h4>
 	  <p>
 	    On the first day you have registered to attend the conference,
-	    please report to the Strand building reception at the below
-	    address. On the Strand campus <a href="img/strandmap.jpg"
+	    please report to the <strong>Strand building reception</strong> at
+	    the below address. On the Strand campus <a href="img/strandmap.jpg"
 	    target="_blank">map</a> the Strand building is labelled 'B' and
 	    coloured green.
 	  </p>
