change heading on location page

--- a/views/pages/location.ejs
+++ b/views/pages/location.ejs
@@ -31,7 +31,7 @@
 	    London. See <a href="https://www.google.co.uk/maps/search/lodging+near+Strand,+London+WC2R+2LS/data=!3m1!4b1!4m5!2m4!5m3!5m2!1s2018-06-25!2i2"
 			   target="_blank">links</a> for nearby accommodation.
 	  </p>
-	  <h4>Registration</h4>
+	  <h4>Arrival at the conference</h4>
 	  <p>
 	    On the first day you have registered to attend the conference,
 	    please report to the <strong>Strand building reception</strong> at
